# interview

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: build-components.yml  build-dev-server-image.yml  build-lib.yml  build-server-image.yml
js/: .eslintrc.json  .npmrc  README.md  package-lock.json  package.json  tsconfig.json
js/components/: package.json  tsconfig.json
js/components/.storybook/: main.ts  preview.tsx
js/components/src/components/: Markdown.tsx  componentMap.ts
js/components/src/components/fields/: BoolField.tsx  DateField.tsx  EmailField.tsx  Field.tsx  NumberField.tsx  SelectField.tsx  TextField.tsx
js/components/src/stories/: tsconfig.json
js/lib/: jest.config.ts  package.json  tsconfig.json
js/lib/src/: fields.ts  index.ts  state.ts  store.ts  types.ts
js/lib/src/test/: fields.test.ts  state.test.ts  store.test.ts  tsconfig.json
python/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
python/docs/: Makefile
python/docs/source/: concepts.md  conf.py  index.rst  interview.md  introduction.md
python/docs/source/configuration/: field.md  index.rst  interviews.md  questions.md  step.md
python/src/oes/interview/: __init__.py  process.py  request.py  response.py  serialization.py  state.py
python/src/oes/interview/config/: field.py  interview.py  question.py  question_bank.py  step.py
python/src/oes/interview/config/fields/: __init__.py  bool.py  date.py  email.py  number.py  select.py  text.py
python/src/oes/interview/parsing/: location.py  template.py  types.py  undefined.py
python/src/oes/interview/server/: __init__.py  app.py  settings.py  views.py
python/tests/: __init__.py  conftest.py  test_interview_process.py  test_serialization.py  test_state.py
python/tests/config/: test_interview.py  test_question.py  test_question_bank.py  test_step.py
python/tests/config/fields/: test_bool.py  test_date.py  test_email.py  test_required_value.py  test_select.py  test_text.py
python/tests/data/: questions.yml
python/tests/parsing/: test_location.py  test_types.py  test_undefined.py
python/tests/server/: __init__.py  test_views.py
python/tests/test_data/: interviews.yml  questions.yml
(+14 files in other folders)
